# datakit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: usage.md
examples/: README.md  sensor_data.csv
src/datakit/: __init__.py  clean.py  cli.py  fit.py  io.py  plot.py  stats.py
tests/: conftest.py  test_clean.py  test_cli.py  test_fit.py  test_plot.py  test_stats.py
