[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datakit"
version = "0.1.0"
description = "Quick analysis of CSV measurement data: stats, curve fitting, plots, cleaning"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Anton", email = "khachatryananton09@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pandas>=1.5",
    "matplotlib>=3.6",
]
keywords = ["csv", "statistics", "curve-fitting", "plotting", "measurement"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/khachatryann/datakit"

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
]

[project.scripts]
datakit = "datakit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/datakit"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.isort]
known-first-party = ["datakit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
